# PrintAi_technical_interview

./: .dockerignore  .gitignore  Readme.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: Dockerfile  celery_worker.py  loggin_config.py  main.py  models.py  pyproject.toml  pytest.ini  redis_storage.py  requirements.txt  tasks.py  utils.py
backend/app/scraping/: scrape_books.py  scrape_hn.py
backend/app/tests/: conftest.py  test_save_books_into_redis_database.py
backend/app/tests/api/: test_books.py  test_hadlines.py  test_hello_world.py  test_init.py  test_start_initial_books_scrape.py  test_task_status.py
backend/app/tests/scrapping/: test_scrape_hn.py
backend/app/tests/scrapping/scrape_books/: test_extract_books_from_page.py  test_get_catalog_page.py  test_scrape_books.py
backend/app/tests/scrapping/scrape_hn/: test_extract_stories.py  test_get_hackernews_top_stories.py  test_go_to_next_page.py  test_load_hn_page.py
backend/app/tests/tasks/: test_scrape_books_task.py
backend/app/tests/utils/: test_retry_decorator.py
frontend/: Dockerfile
frontend/chatbot-ui/src/: settings.ts
frontend/chatbot-ui/src/pages/chat/: chat.tsx
frontend/chatbot-ui/src/services/: sendMessage.ts
workflows/: .env  Dockerfile  n8n_credentials.json  n8n_workflow.json
