[project]
name = "app"
version = "0.1.0"
description = "PrintAI Techical Proyect"
authors = [
    {name = "Lazaro Altedill",email = "lazaroah02@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "beautifulsoup4 (==4.13.4)",
    "redis (==5.2.1)",
    "flake8 (==7.2.0)",
    "flask (==3.1.0)",
    "flask-restful (==0.3.10)",
    "flask-testing (>=0.8.1,<0.9.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "celery (==5.5.1)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
